# AI-Scientist

./: Dockerfile  Makefile  README.md  README_local.md  docker-compose.yaml  launch_scientist.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
ai_scientist/: perform_writeup.py
templates/grokking/: experiment.py  ideas.json
templates/grokking/run_0/: all_results.npy  final_info.json  final_info_permutation_0.json  final_info_permutation_1.json  final_info_permutation_2.json  final_info_x_div_y_0.json  final_info_x_div_y_1.json  final_info_x_div_y_2.json  final_info_x_minus_y_0.json  final_info_x_minus_y_1.json  final_info_x_minus_y_2.json  final_info_x_plus_y_0.json  final_info_x_plus_y_1.json  final_info_x_plus_y_2.json
